--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
-  ci-preview-direct-tests-pre-merge:
+  staging-preview-direct-tests-pre-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     runs-on: ubuntu-latest
     steps:
@@ -37,9 +37,9 @@ jobs:
       - name: Run direct kubectl exec tests against ci-preview
         uses: ./.github/actions/tests/k8s-direct-tests
         with:
-          namespace: staging-preview
-          pod: staging-preview-validator-1
-          env: staging-preview
+          namespace: ci-preview
+          pod: ci-preview-validator-1
+          env: ci-preview
         env:
           AWS_REGION: "eu-central-1"
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
@@ -50,7 +50,7 @@ jobs:
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
-  ci-preview-e2e-tests-pre-merge:
+  staging-preview-e2e-tests-pre-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     runs-on: eks
     steps:
@@ -72,75 +72,75 @@ jobs:
 #          env: ci
 #          decrypt: true
 #          blockchain: substrate
-      - name: Test against ci-preview
+      - name: Test against staging-preview
         uses: ./.github/actions/tests/run-e2e-tests
         with:
           env: staging
           decrypt: true
           blockchain: substrate
 
-  build-linux-x86_64-pre-merge:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    outputs:
-      sha: ${{ steps.get_sha.outputs.sha }}
-    steps:
-      - name: Checkout for Earthfile
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
-          path: ./to-build
-      - name: Get current commit SHA
-        id: get_sha
-        working-directory: ./to-build
-        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
-      - name: Acquire AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
-      - name: Login to container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Copy Earthfile to build directory
-        run: |
-          cp Earthfile ./to-build/
-      - name: Run Earthly (build, test, cargo fmt, cargo clippy, publish Docker image)
-        working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
-        run: |
-          earthly -P +ci-pre-merge \
-          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
-          --tags="${{ steps.get_sha.outputs.sha }}"
-      - name: Upload partner-chains-node artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: partner-chains-node-artifact
-          path: ./to-build/partner-chains-node-artifact
-      - name: Upload chain spec artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: chain-specs
-          path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
-            ./to-build/staging_preprod_chain_spec.json
+#  build-linux-x86_64-pre-merge:
+#    runs-on: ubuntu-latest
+#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+#    outputs:
+#      sha: ${{ steps.get_sha.outputs.sha }}
+#    steps:
+#      - name: Checkout for Earthfile
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#          ref: ${{ github.sha }}
+#      - name: Checkout code to build
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#          ref: ${{ github.event.pull_request.head.sha }}
+#          path: ./to-build
+#      - name: Get current commit SHA
+#        id: get_sha
+#        working-directory: ./to-build
+#        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+#      - name: Setup Earthly
+#        uses: ./.github/earthly-setup
+#        with:
+#          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+#          config_tar: ${{ secrets.EARTHLY_TAR }}
+#      - name: Acquire AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          aws-region: ${{ env.AWS_REGION }}
+#      - name: Login to container registry
+#        uses: docker/login-action@v3
+#        with:
+#          registry: ${{ secrets.ECR_REGISTRY_SECRET }}
+#      - name: Copy Earthfile to build directory
+#        run: |
+#          cp Earthfile ./to-build/
+#      - name: Run Earthly (build, test, cargo fmt, cargo clippy, publish Docker image)
+#        working-directory: ./to-build
+#        env:
+#          EARTHLY_CI: true
+#          EARTHLY_OUTPUT: true
+#          EARTHLY_PUSH: true
+#        run: |
+#          earthly -P +ci-pre-merge \
+#          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
+#          --tags="${{ steps.get_sha.outputs.sha }}"
+#      - name: Upload partner-chains-node artifact
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: partner-chains-node-artifact
+#          path: ./to-build/partner-chains-node-artifact
+#      - name: Upload chain spec artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: chain-specs
+#          path: |
+#            ./to-build/devnet_chain_spec.json
+#            ./to-build/ci_preview_chain_spec.json
+#            ./to-build/staging_preview_chain_spec.json
+#            ./to-build/staging_preprod_chain_spec.json
 
   local-environment-tests:
     continue-on-error: true
