test: use one xray ticket to report parameterized tests

--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -13,10 +13,10 @@ markers =
     # helper tags
     skip_on_new_chain: skip test on new chain (less than 2 MC epochs have passed)
     candidate_status: active or inactive, used in test_registrations.py
+    test_key: xray id (use only for parametrized tests to avoid cluttering test repository)
 
     # deprecated tags - soon to be removed
-    probability: (deprecated) used to skip committee participation on short epochs chains
-    test_key: (deprecated) xray id
+    probability: (deprecated) used to skip committee participation on short epochs chains    
 
 junit_duration_report = call
 log_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
