feat: remove local-environment-tests from post-merge flow (#801)
* feat: remove local-environment-tests from post-merge flow

* fix: complete check

---------

Co-authored-by: Radosław Sporny <404@rspo.dev>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -462,72 +462,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  local-env-post-merge:
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
-    needs: build-linux-x86_64-post-merge
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: master
-      - name: Deploy and test against local environment
-        uses: ./.github/actions/tests/local-environment-tests
-        with:
-          tag: CI
-          image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-x86_64-post-merge.outputs.sha }}
-          sha: ${{ needs.build-linux-x86_64-post-merge.outputs.sha }}
-          markers: full
-        env:
-          SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
-          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          AWS_REGION: ${{ env.AWS_REGION }}
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-          TEST_ENVIRONMENT: local
-
-  local-env-post-merge-alert:
-    needs: local-env-post-merge
-    if: always() && needs.local-env-post-merge.result != 'skipped'
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: master
-      - name: Download test report
-        uses: actions/download-artifact@v4
-        with:
-          name: test-results-${{ matrix.markers }}
-          path: e2e-tests/logs-${{ matrix.markers }}
-      - name: Report to slack
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          JIRA_URL: ${{ secrets.JIRA_URL }}
-          repository: ${{ github.repository }}
-          slack_ref_name: ${{ github.ref_name }}
-          job_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          github_actor_username: ${{ github.actor }}
-          env: local-post-merge
-        run: |
-          cd e2e-tests
-          # Ensure logs directory exists
-          mkdir -p logs
-          # Copy downloaded artifacts to where the script expects them, including hidden files
-          cp -r logs-${{ matrix.markers }}/. logs/
-          ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null "${{ matrix.markers }}"
-        shell: bash
-
   deploy-ci-preview:
     needs:
       - build-linux-x86_64-post-merge
-      - local-env-post-merge-alert
     permissions:
       id-token: write
       contents: write
@@ -584,7 +521,6 @@ jobs:
         build-linux-x86_64-post-merge,
         deploy-rustdoc,
         upload-chain-specs,
-        local-env-post-merge,
         ci-preview-tests-post-merge,
         deploy-ci-preview,
         upload-to-s3,
@@ -593,11 +529,11 @@ jobs:
     steps:
       - name: Check if any needed job failed
         run: |
-          if [[ "${{ needs.deploy-rustdoc.result }}" != "success" ||
-                "${{ needs.build-linux-x86_64-post-merge.result }}" != "success" ||
+          if [[ "${{ needs.build-linux-x86_64-post-merge.result }}" != "success" ||
+                "${{ needs.deploy-rustdoc.result }}" != "success" ||
                 "${{ needs.upload-chain-specs.result }}" != "success" ||
-                "${{ needs.local-env-post-merge.result }}" != "success" ]]
-                "${{ needs.deploy-ci-preview.result }}" != "success" ]]
+                "${{ needs.ci-preview-tests-post-merge.result }}" != "success" ||
+                "${{ needs.deploy-ci-preview.result }}" != "success" ||
                 "${{ needs.upload-to-s3.result }}" != "success" ]]; then
             echo "One or more needed jobs failed."
             exit 1
