feat: refactor CI chain-spec building, add governed-map values

--- a/.github/actions/deploy/deploy-staging-preprod/action.yml
+++ b/.github/actions/deploy/deploy-staging-preprod/action.yml
@@ -1,4 +1,4 @@
-name: "Deploy staging-preprod"
+name: "Deploy staging-preprod - THERE ARE NO VALID CHAIN SPECS FOR PREPROD"
 description: "Deploys the staging-preprod environment with chain-spec and image override using Kubernetes and Helm."
 inputs:
   image:
