--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,19 +57,14 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
-
       - name: build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
-
       - name: test
         run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-
       - name: lint
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-
       - name: formatting
         run: nix develop -c bash -c "cargo fmt --check"
-
       - name: build chain specs
         run: |
           source dev/envs/devnet/.envrc
@@ -78,14 +73,12 @@ jobs:
           target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
           source dev/envs/staging-preview/.envrc
           target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
-
       - name: build and push docker image
         run: |
           cp target/release/partner-chains-demo-node .
           nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
           docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }} .
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
-
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
@@ -122,7 +115,6 @@ jobs:
           markers: ${{ matrix.markers }}
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
           AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           AWS_REGION: ${{ env.AWS_REGION }}
           ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
@@ -264,26 +256,15 @@ jobs:
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout for Earthfile
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: master
-          path: ./to-build
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Get current commit SHA
         id: get_sha
         working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -299,24 +280,51 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Copy Earthfile to build directory
+      - name: cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: build
+        run: nix develop -c bash -c "cargo build --locked --profile=release"
+      - name: build chain specs
         run: |
-          cp Earthfile ./to-build/
-      - name: Build and Artifacts and Push Image
-        working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
+          source dev/envs/devnet/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+          source dev/envs/ci-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
+          source dev/envs/staging-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+      - name: Build and push docker image
         run: |
-          earthly -P +ci-post-merge \
-          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node ghcr.io/${{ github.repository }}/partner-chains-node-unstable" \
-          --tags="${{ steps.get_sha.outputs.sha }} latest"
+          cp target/release/partner-chains-demo-node .
+          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+
+          docker build -t partner-chains-node:base .
+
+          tags=("${{ steps.get_sha.outputs.sha }}" "latest")
+          images=(
+            "${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node"
+            "ghcr.io/${{ github.repository }}/partner-chains-node-unstable"
+          )
+
+          for tag in "${tags[@]}"; do
+            for image in "${images[@]}"; do
+              full_tag="$image:$tag"
+              docker tag partner-chains-node:base "$full_tag"
+              docker push "$full_tag"
+            done
+          done
+
       - name: Rename artifact
         run: |
-          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          chmod +x ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          cp ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
+          cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          chmod +x ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          cp ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
       - name: Copy to binary-host
         uses: ./.github/actions/artifacts/copy-to-binary-host
         with:
@@ -332,15 +340,15 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
+            ./devnet_chain_spec.json
+            ./ci_preview_chain_spec.json
+            ./staging_preview_chain_spec.json
 
   build-linux-arm64:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
@@ -558,22 +566,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout for Earthfile
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ inputs.sha }}
-          path: ./to-build
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -583,34 +580,56 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Copy Earthfile to build directory
+      - name: cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: build
+        run: nix develop -c bash -c "cargo build --locked --profile=release"
+
+      - name: test
+        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
+
+      - name: lint
+        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
+
+      - name: formatting
+        run: nix develop -c bash -c "cargo fmt --check"
+
+      - name: build chain specs
         run: |
-          cp Earthfile ./to-build/
-      - name: Build and Artifacts and Push Image
-        working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
+          source dev/envs/devnet/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+          source dev/envs/ci-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
+          source dev/envs/staging-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+
+      - name: build and push docker image
         run: |
-          earthly -P +ci-workflow-dispatch --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" --tags="${{ inputs.sha }}"
-      - name: Rename artifact
-        run: |
-          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
-          chmod +x ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          cp target/release/partner-chains-demo-node .
+          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+          docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }} .
+          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
+
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
-          name: partner-chains-node-linux-artifact
-          path: ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          name: partner-chains-node-artifact
+          path: ./partner-chains-node-artifact
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
+            ./devnet_chain_spec.json
+            ./ci_preview_chain_spec.json
+            ./staging_preview_chain_spec.json
 
   build-linux-arm64-workflow-dispatch:
     if: github.event_name == 'workflow_dispatch'
