update chain spec creation code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,12 +67,15 @@ jobs:
         run: nix develop -c bash -c "cargo fmt --check"
       - name: build chain specs
         run: |
-          source dev/envs/devnet/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-          source dev/envs/ci-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
-          source dev/envs/staging-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+            source ./dev/envs/devnet/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+            source ./dev/envs/ci-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+            source ./dev/envs/staging-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
       - name: build and push docker image
         run: |
           cp target/release/partner-chains-demo-node .
@@ -293,12 +296,15 @@ jobs:
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: build chain specs
         run: |
-          source dev/envs/devnet/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-          source dev/envs/ci-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
-          source dev/envs/staging-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+            source ./dev/envs/devnet/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+            source ./dev/envs/ci-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > ci_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+            source ./dev/envs/staging-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > staging_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
       - name: Build and push docker image
         run: |
           cp target/release/partner-chains-demo-node .
