--- a/deny.toml
+++ b/deny.toml
@@ -96,7 +96,8 @@ allow = [
     # Specific GPL license from your Python script
     "GPL-3.0-or-later WITH Classpath-exception-2.0",
     "Unicode-3.0",
-    "CDLA-Permissive-2.0"
+    "CDLA-Permissive-2.0",
+    "Apache-2.0 WITH LLVM-exception"
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
