--- a/deny.toml
+++ b/deny.toml
@@ -93,6 +93,7 @@ allow = [
     "MPL-2.0", # Mozilla Public License 2.0
     "Unlicense",
     "CC0-1.0",
+    "GPL-3.0-or-later WITH Classpath-exception-2.0",
     "Unicode-3.0",
     "CDLA-Permissive-2.0",
     "Apache-2.0 WITH LLVM-exception"
