--- a/deny.toml
+++ b/deny.toml
@@ -102,7 +102,11 @@ allow = [
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
 confidence-threshold = 0.8 # Default is 0.8, usually sufficient.
-unused-allowed = "allow"
+
+# Don't warn (and fail the build) if an allowed license is not found in every dependency type.
+# This is useful if a license is only used by e.g. git dependencies but not crates.io ones.
+unused-allowed-license = "allow"
+
 # Allow 1 or more licenses on a per-crate basis, so that particular licenses
 # aren't accepted for every possible crate as with the normal allow list
 exceptions = [
