--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -25,8 +25,11 @@ serde_json = { workspace = true, default-features = false, features = [
 	"alloc",
 ] }
 
+pallet-beefy = { workspace = true }
 pallet-aura = { workspace = true }
 pallet-balances = { workspace = true }
+pallet-beefy-mmr = { workspace = true }
+pallet-mmr = { workspace = true }
 frame-support = { workspace = true }
 pallet-grandpa = { workspace = true }
 pallet-partner-chains-session = { workspace = true, features = [
@@ -43,6 +46,7 @@ frame-executive = { workspace = true }
 sp-api = { workspace = true }
 sp-block-builder = { workspace = true }
 sp-consensus-aura = { workspace = true }
+sp-consensus-beefy = { workspace = true }
 sp-consensus-grandpa = { workspace = true }
 sp-consensus-slots = { workspace = true }
 sp-core = { workspace = true }
@@ -127,6 +131,9 @@ std = [
 	"frame-try-runtime/std",
 	"pallet-aura/std",
 	"pallet-balances/std",
+	"pallet-beefy/std",
+	"pallet-beefy-mmr/std",
+	"pallet-mmr/std",
 	"pallet-block-producer-fees/std",
 	"pallet-block-production-log/std",
 	"pallet-grandpa/std",
@@ -144,6 +151,7 @@ std = [
 	"sp-block-builder/std",
 	"sp-block-producer-fees/std",
 	"sp-consensus-aura/std",
+	"sp-consensus-beefy/std",
 	"sp-consensus-grandpa/std",
 	"sp-consensus-slots/std",
 	"sp-core/std",
@@ -180,6 +188,8 @@ runtime-benchmarks = [
 	"frame-system-benchmarking/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
+	"pallet-beefy-mmr/runtime-benchmarks",
+	"pallet-mmr/runtime-benchmarks",
 	"pallet-grandpa/runtime-benchmarks",
 	"pallet-sudo/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
@@ -199,6 +209,9 @@ try-runtime = [
 	"frame-support/try-runtime",
 	"pallet-aura/try-runtime",
 	"pallet-balances/try-runtime",
+	"pallet-beefy/try-runtime",
+	"pallet-beefy-mmr/try-runtime",
+	"pallet-mmr/try-runtime",
 	"pallet-grandpa/try-runtime",
 	"pallet-sudo/try-runtime",
 	"pallet-timestamp/try-runtime",
