--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,6 +183,7 @@ sqlx = { version = "0.8.5", default-features = false, features = [
 	"bigdecimal",
 ] }
 derive-where = { version = "1.2.7", default-features = false }
+once_cell = { version = "1.21.3", default-features = false }
 
 # substrate dependencies
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-5" }
